adding latest content

--- a/index.html
+++ b/index.html
@@ -180,11 +180,11 @@
       <div class="flex justify-center">
         <div class="flex flex-col mr-6 items-end mt-24">
           <div
-            class="bg-[#1a2129] w-24 h-20 rounded-md border border-[1px] border-gray-800 mb-4"
+            class="bg-[#1a2129] w-24 h-20 rounded-md border border-gray-800 mb-4"
           ></div>
           <div class="flex flex-row-reverse">
             <div
-              class="bg-[#1a2129] w-44 h-32 py-6 px-4 rounded-md border border-[1px] border-gray-800 mb-4 text-gray-400 font-light text-md"
+              class="bg-[#1a2129] w-44 h-32 py-6 px-4 rounded-md border border-gray-800 mb-4 text-gray-400 font-light text-md"
             >
               CPUs up to
               <div>
@@ -201,11 +201,11 @@
               </div>
             </div>
             <div
-              class="bg-[#1a2129] w-36 h-30 mr-4 rounded-md border-[1px] border-gray-800 mb-4"
+              class="bg-[#1a2129] w-36 h-30 mr-4 rounded-md border-gray-800 mb-4"
             ></div>
           </div>
           <div
-            class="bg-[#1a2129] w-64 p-4 h-16 rounded-md border-[1px] border-gray-800 flex justify-center items-center mb-4"
+            class="bg-[#1a2129] w-64 p-4 h-16 rounded-md border-gray-800 flex justify-center items-center mb-4"
           >
             <img src="img/illo-hero-icons.png" alt="" />
           </div>
@@ -269,11 +269,11 @@
         </div>
         <div class="flex flex-col mt-[4.5rem] ml-4 z-20">
           <div
-            class="bg-[#1a2129] w-16 h-32 rounded-md border border-[1px] border-gray-800 mb-4"
+            class="bg-[#1a2129] w-16 h-32 rounded-md border border-gray-800 mb-4"
           ></div>
           <div class="flex items-end">
             <div
-              class="bg-[#1a2129] w-[8rem] h-28 pt-6 px-3 rounded-md border border-[1px] border-gray-800 mb-4 mr-4 text-gray-400 font-light text-md"
+              class="bg-[#1a2129] w-[8rem] h-28 pt-6 px-3 rounded-md border border-gray-800 mb-4 mr-4 text-gray-400 font-light text-md"
             >
               Memory up to
               <div>
@@ -494,7 +494,7 @@
         </div>
         <div class="relative">
           <div class="rounded-lg overflow-hidden">
-            <img class="w-[34rem] z-10" src="./img/illo-hello.png" alt="" />
+            <img class="w-[34rem] m-w-[25rem] z-10" src="./img/illo-hello.png" alt="" />
           </div>
           <div
             class="rounded-lg overflow-hidden absolute left-44 top-32 z-30"
@@ -514,7 +514,7 @@
     <section id="stuffYouCareAbout">
       <div class="flex flex-col justify-center items-center">
         <div class="w-[70rem] text-center">
-          <h1 id="sec4Title" class="text-5xl font-bold">
+          <h1 id="sec4Title" class="text-4xl lg:text-5xl font-bold">
             Tabs, spaces, Monokai, Solarized, light, dark, Prettier, Beautify...
           </h1>
         </div>
@@ -958,7 +958,7 @@
       </div>
     </section>
     <section>
-      <div class="flex flex-col mx-40 mb-[13rem] justify-center items-center">
+      <div class="flex flex-col pl-32 mx-40 mb-[13rem] justify-center items-center">
         <div>
           <div class="text-[2.5rem] font-bold mb-16 self-center">
             Frequently asked questions
@@ -1005,187 +1005,189 @@
       </div>
     </section>
     <section>
-      <div class="flex flex-col justify-start items-start ml-12">
-        <div class="text-3xl font-semibold mb-3">GitHub</div>
-        <div class="flex flex-col">
-          <div class="text-sm text-gray-300 mt-3">
-            Subscribe to our newsletter
+      <div class="flex justify-center">
+        <div class="flex flex-col justify-start items-start mx-12 inherit-width">
+          <div class="text-3xl font-semibold mb-3">GitHub</div>
+          <div class="flex flex-col">
+            <div class="text-sm text-gray-300 mt-3">
+              Subscribe to our newsletter
+            </div>
+            <div class="text-sm text-[#8A92A0] mb-5">
+              Get product updates, company news, and more.
+            </div>
+            <div
+              class="border border-gray-500 hover:border-2 hover:border-white text-center p-3 w-32 rounded-md mb-24"
+            >
+              Subscribe
+            </div>
           </div>
-          <div class="text-sm text-[#8A92A0] mb-5">
-            Get product updates, company news, and more.
-          </div>
-          <div
-            class="border border-gray-500 hover:border-2 hover:border-white text-center p-3 w-32 rounded-md mb-24"
-          >
-            Subscribe
+          <div class="flex justify-between w-full">
+            <div class="flex flex-col items-start justify-evenly">
+              <div>
+                <code class="text-[#8A92A0] text-sm font-medium">Product</code>
+              </div>
+              <ul>
+                <li
+                  class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
+                >
+                  Features
+                </li>
+                <li
+                  class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
+                >
+                  Security
+                </li>
+                <li
+                  class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
+                >
+                  Team
+                </li>
+                <li
+                  class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
+                >
+                  Enterprise
+                </li>
+                <li
+                  class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
+                >
+                  Customer stories
+                </li>
+                <li
+                  class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
+                >
+                  The ReadME Project
+                </li>
+                <li
+                  class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
+                >
+                  Pricing
+                </li>
+                <li
+                  class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
+                >
+                  Resources
+                </li>
+                <li
+                  class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
+                >
+                  Roadmap
+                </li>
+              </ul>
+            </div>
+            <div class="flex flex-col items-start justify-start">
+              <div>
+                <code class="text-[#8A92A0] text-sm font-medium">Platform</code>
+              </div>
+              <ul>
+                <li
+                  class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
+                >
+                  Developer API
+                </li>
+                <li
+                  class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
+                >
+                  Partners
+                </li>
+                <li
+                  class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
+                >
+                  Atom
+                </li>
+                <li
+                  class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
+                >
+                  Electron
+                </li>
+                <li
+                  class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
+                >
+                  GitHub Desktop
+                </li>
+              </ul>
+            </div>
+            <div class="flex flex-col items-start justify-start">
+              <div>
+                <code class="text-[#8A92A0] text-sm font-medium">Support</code>
+              </div>
+              <ul>
+                <li
+                  class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
+                >
+                  Docs
+                </li>
+                <li
+                  class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
+                >
+                  Community Forum
+                </li>
+                <li
+                  class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
+                >
+                  Professional Services
+                </li>
+                <li
+                  class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
+                >
+                  Learning Lab
+                </li>
+                <li
+                  class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
+                >
+                  Status
+                </li>
+                <li
+                  class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
+                >
+                  Contact GitHub
+                </li>
+              </ul>
+            </div>
+            <div class="flex flex-col items-start justify-start">
+              <div>
+                <code class="text-[#8A92A0] text-sm font-medium">Company</code>
+              </div>
+              <ul>
+                <li
+                  class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
+                >
+                  About
+                </li>
+                <li
+                  class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
+                >
+                  Blog
+                </li>
+                <li
+                  class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
+                >
+                  Careers
+                </li>
+                <li
+                  class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
+                >
+                  Press
+                </li>
+                <li
+                  class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
+                >
+                  Inclusion
+                </li>
+                <li
+                  class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
+                >
+                  Social Impact
+                </li>
+                <li
+                  class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
+                >
+                  Shop
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
-        <div class="flex justify-between w-full pr-32">
-          <div class="flex flex-col items-start justify-evenly">
-            <div>
-              <code class="text-[#8A92A0] text-sm font-medium">Product</code>
-            </div>
-            <ul>
-              <li
-                class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
-              >
-                Features
-              </li>
-              <li
-                class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
-              >
-                Security
-              </li>
-              <li
-                class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
-              >
-                Team
-              </li>
-              <li
-                class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
-              >
-                Enterprise
-              </li>
-              <li
-                class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
-              >
-                Customer stories
-              </li>
-              <li
-                class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
-              >
-                The ReadME Project
-              </li>
-              <li
-                class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
-              >
-                Pricing
-              </li>
-              <li
-                class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
-              >
-                Resources
-              </li>
-              <li
-                class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
-              >
-                Roadmap
-              </li>
-            </ul>
-          </div>
-          <div class="flex flex-col items-start justify-start">
-            <div>
-              <code class="text-[#8A92A0] text-sm font-medium">Platform</code>
-            </div>
-            <ul>
-              <li
-                class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
-              >
-                Developer API
-              </li>
-              <li
-                class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
-              >
-                Partners
-              </li>
-              <li
-                class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
-              >
-                Atom
-              </li>
-              <li
-                class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
-              >
-                Electron
-              </li>
-              <li
-                class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
-              >
-                GitHub Desktop
-              </li>
-            </ul>
-          </div>
-          <div class="flex flex-col items-start justify-start">
-            <div>
-              <code class="text-[#8A92A0] text-sm font-medium">Support</code>
-            </div>
-            <ul>
-              <li
-                class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
-              >
-                Docs
-              </li>
-              <li
-                class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
-              >
-                Community Forum
-              </li>
-              <li
-                class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
-              >
-                Professional Services
-              </li>
-              <li
-                class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
-              >
-                Learning Lab
-              </li>
-              <li
-                class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
-              >
-                Status
-              </li>
-              <li
-                class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
-              >
-                Contact GitHub
-              </li>
-            </ul>
-          </div>
-          <div class="flex flex-col items-start justify-start">
-            <div>
-              <code class="text-[#8A92A0] text-sm font-medium">Company</code>
-            </div>
-            <ul>
-              <li
-                class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
-              >
-                About
-              </li>
-              <li
-                class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
-              >
-                Blog
-              </li>
-              <li
-                class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
-              >
-                Careers
-              </li>
-              <li
-                class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
-              >
-                Press
-              </li>
-              <li
-                class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
-              >
-                Inclusion
-              </li>
-              <li
-                class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
-              >
-                Social Impact
-              </li>
-              <li
-                class="text-sm text-[#8A92A0] hover:text-white my-3 font-medium"
-              >
-                Shop
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
+      </div>  
     </section>
     <section id="footer" class="mt-20">
       <div
